--- a/Challenge04LGBB/View/ConfigScreen.storyboard
+++ b/Challenge04LGBB/View/ConfigScreen.storyboard
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="KJi-AQ-Sa0">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="b8H-M6-TeK">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -17,59 +16,20 @@
         </array>
     </customFonts>
     <scenes>
-        <!--ChosenRecipe-->
-        <scene sceneID="vcS-6m-xhp">
-            <objects>
-                <viewControllerPlaceholder storyboardName="ChosenRecipe" id="tMa-Zc-PM1" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="sAd-FG-nPi"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Q9a-AO-JzP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-595" y="-217"/>
-        </scene>
-        <!--Config View Controller-->
+        <!--Configurações-->
         <scene sceneID="nGD-Q4-yBO">
             <objects>
-                <viewController id="KJi-AQ-Sa0" customClass="ConfigViewController" customModule="Challenge04LGBB" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ConfigScreen" id="KJi-AQ-Sa0" customClass="ConfigViewController" customModule="Challenge04LGBB" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="iEa-j8-dLY">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AMS-A9-elK">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="122"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g8V-31-fTr">
-                                        <rect key="frame" x="20" y="73" width="56" height="47"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="47" id="tQk-qD-t0f"/>
-                                            <constraint firstAttribute="width" constant="56" id="u6h-sY-sGr"/>
-                                        </constraints>
-                                        <color key="tintColor" systemColor="tintColor"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" image="Back"/>
-                                        <connections>
-                                            <segue destination="tMa-Zc-PM1" kind="presentation" identifier="Choosen" modalPresentationStyle="fullScreen" id="CAg-7l-MNw"/>
-                                        </connections>
-                                    </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Configurações" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ntd-Hq-dif">
-                                        <rect key="frame" x="96" y="73" width="222.5" height="47"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="222.5" id="3u3-Hr-Ti9"/>
-                                            <constraint firstAttribute="height" constant="47" id="50w-WO-AIK"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="22"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="122" id="7Z9-hG-tVK"/>
-                                    <constraint firstItem="g8V-31-fTr" firstAttribute="leading" secondItem="AMS-A9-elK" secondAttribute="leading" constant="20" id="CRh-4N-Lbt"/>
-                                    <constraint firstItem="g8V-31-fTr" firstAttribute="centerY" secondItem="ntd-Hq-dif" secondAttribute="centerY" id="bBE-mi-rir"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="414" id="fdL-E5-u8w"/>
-                                    <constraint firstAttribute="bottom" secondItem="g8V-31-fTr" secondAttribute="bottom" constant="2" id="rRc-I1-Jo0"/>
-                                    <constraint firstItem="ntd-Hq-dif" firstAttribute="centerX" secondItem="AMS-A9-elK" secondAttribute="centerX" id="tmP-bI-sPa"/>
-                                    <constraint firstAttribute="bottom" secondItem="ntd-Hq-dif" secondAttribute="bottom" constant="2" id="uH6-5x-ecT"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fMi-fN-Xh8" userLabel="TouchView">
@@ -166,7 +126,6 @@
                             <constraint firstItem="Pvq-dy-iuL" firstAttribute="leading" secondItem="ZW0-XW-RXR" secondAttribute="leading" constant="37" id="6nY-GO-o6r"/>
                             <constraint firstItem="fMi-fN-Xh8" firstAttribute="top" secondItem="AMS-A9-elK" secondAttribute="bottom" constant="30" id="IL9-yb-YxC"/>
                             <constraint firstItem="AMS-A9-elK" firstAttribute="top" secondItem="iEa-j8-dLY" secondAttribute="top" id="K8R-Ue-d8h"/>
-                            <constraint firstItem="Pvq-dy-iuL" firstAttribute="centerX" secondItem="ntd-Hq-dif" secondAttribute="centerX" id="KU8-rV-Lee"/>
                             <constraint firstAttribute="trailing" secondItem="AMS-A9-elK" secondAttribute="trailing" id="PUd-A8-bPK"/>
                             <constraint firstItem="buq-ym-mST" firstAttribute="leading" secondItem="ZW0-XW-RXR" secondAttribute="leading" constant="20" id="RNk-Ic-1et"/>
                             <constraint firstItem="ZW0-XW-RXR" firstAttribute="trailing" secondItem="Pvq-dy-iuL" secondAttribute="trailing" constant="37" id="TIs-nE-MVh"/>
@@ -176,6 +135,7 @@
                             <constraint firstItem="buq-ym-mST" firstAttribute="top" secondItem="Pvq-dy-iuL" secondAttribute="bottom" constant="40" id="soK-ns-iTO"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Configurações" id="Dyx-54-8Vf"/>
                     <connections>
                         <outlet property="soundEffect" destination="S0x-Lb-gjn" id="CRs-LW-DxE"/>
                         <outlet property="touch" destination="K6B-Tf-lhv" id="ta8-s7-Md1"/>
@@ -183,19 +143,36 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W6F-62-Tfz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="944.92753623188412" y="16.741071428571427"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="bF8-tD-C5y">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="b8H-M6-TeK" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="6hr-ud-GBD">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="22"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="KJi-AQ-Sa0" kind="relationship" relationship="rootViewController" id="CeZ-0K-x5R"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qTn-WY-wLh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
             <point key="canvasLocation" x="34.782608695652179" y="16.741071428571427"/>
         </scene>
     </scenes>
     <resources>
-        <image name="Back" width="32" height="33"/>
         <namedColor name="CorDaview">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="LabelMagenta">
             <color red="0.99607843137254903" green="0.90588235294117647" blue="0.92156862745098034" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="tintColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
     </resources>
 </document>
