--- a/Challenge04LGBB/View/ConfigScreen.storyboard
+++ b/Challenge04LGBB/View/ConfigScreen.storyboard
@@ -24,16 +24,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AMS-A9-elK">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="122"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="122" id="7Z9-hG-tVK"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="414" id="fdL-E5-u8w"/>
-                                </constraints>
-                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fMi-fN-Xh8" userLabel="TouchView">
-                                <rect key="frame" x="20" y="152" width="374" height="55"/>
+                                <rect key="frame" x="20" y="128" width="374" height="55"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Touchless Interaction" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fOS-jW-tIw">
                                         <rect key="frame" x="10" y="12" width="165" height="31"/>
@@ -71,7 +63,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Habilita a troca de instruções por meio de interações sem toque (Touchless Interactions), como piscar e mexer os lábios." lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pvq-dy-iuL">
-                                <rect key="frame" x="37" y="217" width="340" height="65"/>
+                                <rect key="frame" x="37" y="193" width="340" height="65"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="65" id="DT1-N7-nG4"/>
                                     <constraint firstAttribute="width" constant="340" id="dVT-Pz-QVS"/>
@@ -80,7 +72,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="buq-ym-mST" userLabel="SoundView">
-                                <rect key="frame" x="20" y="322" width="374" height="55"/>
+                                <rect key="frame" x="20" y="298" width="374" height="55"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Efeito Sonoro" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AqQ-sd-6TU">
                                         <rect key="frame" x="10" y="12" width="105" height="31"/>
@@ -122,11 +114,8 @@
                         <color key="backgroundColor" name="CorDaview"/>
                         <constraints>
                             <constraint firstItem="ZW0-XW-RXR" firstAttribute="trailing" secondItem="fMi-fN-Xh8" secondAttribute="trailing" constant="20" id="17t-0J-tDf"/>
-                            <constraint firstItem="AMS-A9-elK" firstAttribute="leading" secondItem="ZW0-XW-RXR" secondAttribute="leading" id="1rS-96-Jv4"/>
                             <constraint firstItem="Pvq-dy-iuL" firstAttribute="leading" secondItem="ZW0-XW-RXR" secondAttribute="leading" constant="37" id="6nY-GO-o6r"/>
-                            <constraint firstItem="fMi-fN-Xh8" firstAttribute="top" secondItem="AMS-A9-elK" secondAttribute="bottom" constant="30" id="IL9-yb-YxC"/>
-                            <constraint firstItem="AMS-A9-elK" firstAttribute="top" secondItem="iEa-j8-dLY" secondAttribute="top" id="K8R-Ue-d8h"/>
-                            <constraint firstAttribute="trailing" secondItem="AMS-A9-elK" secondAttribute="trailing" id="PUd-A8-bPK"/>
+                            <constraint firstItem="fMi-fN-Xh8" firstAttribute="top" secondItem="ZW0-XW-RXR" secondAttribute="top" constant="40" id="Pci-vG-Jhd"/>
                             <constraint firstItem="buq-ym-mST" firstAttribute="leading" secondItem="ZW0-XW-RXR" secondAttribute="leading" constant="20" id="RNk-Ic-1et"/>
                             <constraint firstItem="ZW0-XW-RXR" firstAttribute="trailing" secondItem="Pvq-dy-iuL" secondAttribute="trailing" constant="37" id="TIs-nE-MVh"/>
                             <constraint firstItem="fMi-fN-Xh8" firstAttribute="leading" secondItem="ZW0-XW-RXR" secondAttribute="leading" constant="20" id="fbU-Zv-T8E"/>
