--- a/Challenge04LGBB/View/recipesScreen.storyboard
+++ b/Challenge04LGBB/View/recipesScreen.storyboard
@@ -31,7 +31,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h7u-5e-vDg">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h7u-5e-vDg">
                                 <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gHv-2v-PSt">
@@ -380,11 +380,18 @@
                                     </view>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstItem="e58-0S-6Dt" firstAttribute="bottom" secondItem="gHv-2v-PSt" secondAttribute="bottom" id="FVZ-rd-b4e"/>
                                     <constraint firstAttribute="trailing" secondItem="gHv-2v-PSt" secondAttribute="trailing" id="Mbh-j3-daL"/>
+                                    <constraint firstItem="gHv-2v-PSt" firstAttribute="top" secondItem="e58-0S-6Dt" secondAttribute="top" id="RdG-38-jy4"/>
+                                    <constraint firstItem="gHv-2v-PSt" firstAttribute="width" secondItem="VzE-ZH-NOQ" secondAttribute="width" id="Swi-bY-MIe"/>
+                                    <constraint firstItem="gHv-2v-PSt" firstAttribute="leading" secondItem="e58-0S-6Dt" secondAttribute="leading" id="cmo-FS-vna"/>
                                     <constraint firstAttribute="bottom" secondItem="gHv-2v-PSt" secondAttribute="bottom" id="hdR-qF-a1T"/>
+                                    <constraint firstItem="e58-0S-6Dt" firstAttribute="trailing" secondItem="gHv-2v-PSt" secondAttribute="trailing" id="jx8-LT-YEL"/>
                                     <constraint firstItem="gHv-2v-PSt" firstAttribute="top" secondItem="h7u-5e-vDg" secondAttribute="top" id="wPt-ep-nAQ"/>
                                     <constraint firstItem="gHv-2v-PSt" firstAttribute="leading" secondItem="h7u-5e-vDg" secondAttribute="leading" id="xPc-Wu-JHe"/>
                                 </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="e58-0S-6Dt"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="VzE-ZH-NOQ"/>
                             </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
@@ -394,7 +401,6 @@
                             <constraint firstAttribute="bottom" secondItem="h7u-5e-vDg" secondAttribute="bottom" id="k6V-Jo-aQ2"/>
                             <constraint firstItem="h7u-5e-vDg" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="mGV-VU-mL4"/>
                             <constraint firstItem="h7u-5e-vDg" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="rZ0-KK-ifc"/>
-                            <constraint firstItem="gHv-2v-PSt" firstAttribute="width" secondItem="5EZ-qb-Rvc" secondAttribute="width" id="scj-sL-jjJ"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="KMM-9e-6Cz"/>
